--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,5 +18,9 @@
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.2.0",
+    "sqlite3": "^5.0.2"
   }
 }
