--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,11 +13,13 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "isemail": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.2.0",
